# L4D2UID

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  pyproject.toml  requirements.txt
L4D2UID/: __init__.py  tmpclaude-7bc9-cwd  version.py
L4D2UID/l4_chat/: __init__.py  api.py  draw.py  models.py
L4D2UID/l4_help/: __init__.py  get_help.py  help.json
L4D2UID/l4_info/: __init__.py  anne.py  api58.py  daidai.py  panel_redesign.py  pil_enhance.py  pil_utils.py  status.py  utils.py
L4D2UID/l4_maps/: __init__.py  api.py  draw.py  models.py
L4D2UID/l4_user/: __init__.py  add_ck.py
L4D2UID/utils/: error_reply.py  l4_api.py  l4_config.py  l4_font.py  steam_convert.py
L4D2UID/utils/api/: api.py  models.py  request.py
L4D2UID/utils/database/: models.py
test/: generate_footer.py  test.py
