[project]
name = "L4D2UID"
version = "0.1.0"
description = "基于gsuid-core, 支持NoneBot2 & HoshinoBot & ZeroBot & YunzaiBot的全功能某FPS游戏Bot插件"
authors = [
    {name = "Agnes Digital", email = "Z735803792@163.com"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "Pillow",
    "playwright",
    "aiofiles",
    "sqlmodel",
    "cloudscraper>=1.2.71",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
default-groups = []

[dependency-groups]
dev = ["ruff>=0.14.7", "pre-commit>=2.21.0"]
